--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     :root{
       --bg:#0b1020; --panel:#111831; --panel-2:#0f152b;
       --text:#e6eefc; --muted:#a6b0cf;
-      --accent:#00c6ff; /* CoreFlux neon */
-      --accent-2:#ffd23f; /* soft gold   */
+      --accent:#00c6ff; /* CoreFlux cyan */
+      --accent-2:#ffd23f; /* soft gold */
       --border:rgba(255,255,255,.08);
-      --blur:14px; --shadow:0 10px 30px rgba(0,0,0,.45), inset 0 1px 0 rgba(255,255,255,.04);
+      --blur:14px;
+      --shadow:0 10px 30px rgba(0,0,0,.45), inset 0 1px 0 rgba(255,255,255,.04);
       --radius-xl:24px; --radius-lg:18px; --radius-md:14px;
     }
     *{box-sizing:border-box}
@@ -59,7 +60,7 @@
     .stat .k{color:var(--muted);font-size:12px}
     .mock{
       aspect-ratio:16/10;border-radius:var(--radius-xl);border:1px solid var(--border);
-      background:url('assets/images/centered-banner.png') center/cover no-repeat;
+      background:url('assets/images/centered_banner.png') center/cover no-repeat;
       box-shadow:var(--shadow);position:relative;overflow:hidden
     }
 
@@ -183,7 +184,7 @@
           <tr><td>Seat</td><td>OMP-style reclining / office chair shell</td><td>1</td><td>—</td></tr>
           <tr><td>Pedals</td><td>MFG Crosswind / Thrustmaster</td><td>1</td><td>—</td></tr>
           <tr><td>Center mount</td><td>Yoke/Stick 80/20 plate — printed adapter</td><td>1</td><td>STL below</td></tr>
-          <tr><td>Monitor arm</td><td>VESA 75/100, 34–49" ultrawide</td><td>1</td><td>—</td></tr>
+          <tr><td>Monitor arm</td><td>VESA 75/100, 34–49&quot; ultrawide</td><td>1</td><td>—</td></tr>
           <tr><td>Fasteners</td><td>M8 T-nuts + button heads, square nuts (4040)</td><td>—</td><td>—</td></tr>
         </tbody>
       </table>
