--- a/index.html
+++ b/index.html
@@ -11,17 +11,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;900&display=swap" rel="stylesheet">
 
-  <!-- ===== Styles ===== -->
+  <!-- ===== Styles (inline for GitHub Pages simplicity) ===== -->
   <style>
-    /* ---------- Theme ---------- */
     :root{
-      --bg-1:#070b1a;
-      --bg-2:#0a1024;
-      --bg-3:#0f1530;
-      --ink:#e8f0ff;
-      --muted:#9aa6c7;
-      --accent:#00c6ff;     /* CoreFlux cyan */
-      --accent-2:#ffd23f;   /* gold */
+      --bg-1:#070b1a; --bg-2:#0a1024; --bg-3:#0f1530;
+      --ink:#e8f0ff; --muted:#9aa6c7;
+      --accent:#00c6ff; --accent-2:#ffd23f;
       --border:rgba(255,255,255,.10);
       --shadow:0 18px 60px rgba(0,0,0,.55), inset 0 1px 0 rgba(255,255,255,.05);
       --radius-xl:28px; --radius-lg:18px; --radius-md:14px;
@@ -31,15 +26,15 @@
       :root{ --glow: 0 0 60px rgba(0,198,255,.25), 0 0 22px rgba(0,198,255,.18); }
     }
 
-    /* ---------- Base ---------- */
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
       margin:0; font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
       color:var(--ink);
-      background: radial-gradient(1000px 700px at 75% -10%, rgba(0,198,255,.12), transparent 60%),
-                  radial-gradient(900px 650px at 10% 20%, rgba(255,210,63,.10), transparent 60%),
-                  linear-gradient(180deg, var(--bg-2), var(--bg-1) 40%, var(--bg-3));
+      background:
+        radial-gradient(1000px 700px at 75% -10%, rgba(0,198,255,.12), transparent 60%),
+        radial-gradient(900px 650px at 10% 20%, rgba(255,210,63,.10), transparent 60%),
+        linear-gradient(180deg, var(--bg-2), var(--bg-1) 40%, var(--bg-3));
       overflow-x:hidden;
     }
     a{color:inherit;text-decoration:none}
@@ -48,7 +43,7 @@
     .soft-border{border:1px solid var(--border)}
     .glass{background:rgba(14,20,42,.55);backdrop-filter:saturate(140%) blur(14px)}
 
-    /* ---------- Animated background mesh ---------- */
+    /* Background mesh */
     .bg{
       position:fixed; inset:-20% -20%;
       background:
@@ -59,17 +54,14 @@
       z-index:-2;
       animation: drift 18s ease-in-out infinite alternate;
     }
-    @keyframes drift{
-      0%  {transform: translate3d(0,0,0) scale(1)}
-      100%{transform: translate3d(2%, -2%, 0) scale(1.05)}
-    }
+    @keyframes drift{ 0%{transform:translate3d(0,0,0) scale(1)} 100%{transform:translate3d(2%,-2%,0) scale(1.05)} }
 
-    /* ---------- Nav ---------- */
+    /* Nav */
     .nav{position:sticky; top:0; z-index:50}
     .nav__inner{display:flex;align-items:center;justify-content:space-between;padding:18px 0}
     .nav__shell{border-bottom:1px solid var(--border); box-shadow: var(--shadow)}
     .brand{display:flex;align-items:center;gap:16px}
-    /* BIGGER logo (x2) */
+    /* Bigger logo (x2) */
     .brand__logo-wrap{
       width:84px; height:84px; border-radius:16px;
       display:grid; place-items:center;
@@ -91,7 +83,7 @@
       box-shadow:0 14px 40px rgba(0,198,255,.28);
     }
 
-    /* ---------- Hero ---------- */
+    /* Hero */
     header.hero{padding:92px 0 46px; position:relative}
     .hero__grid{display:grid; grid-template-columns:1.05fr .95fr; gap:28px; align-items:center}
     .h1{font-size:clamp(36px,3.8vw,64px); line-height:1.02; margin:0 0 10px; letter-spacing:-.6px}
@@ -107,43 +99,47 @@
           border:1px solid var(--border)}
     .stat .v{font-weight:900; font-size:18px}
     .stat .k{color:var(--muted); font-size:12px}
+
+    /* Hero carousel */
     .mock{
-      aspect-ratio:16/10; border-radius:22px; overflow:hidden; border:1px solid var(--border);
-      box-shadow: var(--shadow), var(--glow); position:relative; transform: translateZ(0);
-      background: url('assets/images/centered_banner.png') center/cover no-repeat, linear-gradient(#0f1433,#0a0f22);
+      position:relative; aspect-ratio:16/9; border-radius:22px; overflow:hidden;
+      border:1px solid var(--border);
+      box-shadow: var(--shadow), var(--glow); transform: translateZ(0);
+      background: linear-gradient(#0f1433,#0a0f22);
       isolation:isolate;
     }
-    /* sheen */
+    .mock__carousel{position:relative; inset:0; width:100%; height:100%}
+    .mock__img{
+      position:absolute; inset:0; width:100%; height:100%; object-fit:cover;
+      opacity:0; transform:scale(1.05);
+      transition:opacity 1.2s ease, transform 6s ease;
+    }
+    .mock__img.active{opacity:1; transform:scale(1)}
     .mock::after{
       content:""; position:absolute; inset:-40% -20% 0 -20%;
       background:linear-gradient(180deg, transparent 0%, rgba(255,255,255,.10) 55%, transparent 100%);
       transform: translateY(-100%); animation: sweep 6s ease-in-out infinite;
       pointer-events:none; mix-blend-mode:screen;
     }
-    @keyframes sweep{
-      0%{transform: translateY(-100%)} 55%{transform: translateY(98%)} 100%{transform: translateY(120%)}
-    }
+    @keyframes sweep{ 0%{transform:translateY(-100%)} 55%{transform:translateY(98%)} 100%{transform:translateY(120%)} }
+    .mock__nav{position:absolute; bottom:18px; left:50%; transform:translateX(-50%); display:flex; gap:8px}
+    .dot{width:10px; height:10px; border-radius:50%; background:rgba(255,255,255,.25); cursor:pointer; transition:background .3s, transform .3s}
+    .dot.active{background:linear-gradient(135deg,var(--accent),#4be3d1); transform:scale(1.2)}
 
-    /* ---------- Sections ---------- */
+    /* Sections */
     section{padding:56px 0}
     .section__head{display:flex; align-items:baseline; justify-content:space-between; margin-bottom:18px}
     .section__title{font-size:clamp(22px,2.2vw,34px); letter-spacing:-.25px}
-    .underline{
-      position:relative; display:inline-block; padding-bottom:6px;
-    }
+    .underline{position:relative; display:inline-block; padding-bottom:6px}
     .underline::after{
       content:""; position:absolute; left:0; right:0; bottom:0; height:3px;
       background:linear-gradient(90deg, var(--accent), #4be3d1 50%, var(--accent-2));
       border-radius:999px; filter:blur(.2px);
     }
-    .pill{
-      font-size:12px; color:#06142b; font-weight:900;
-      background:linear-gradient(135deg, var(--accent-2), #ffe39a);
-      border-radius:999px; padding:6px 10px;
-    }
+    .pill{font-size:12px; color:#06142b; font-weight:900; background:linear-gradient(135deg, var(--accent-2), #ffe39a); border-radius:999px; padding:6px 10px}
     .panel{border-radius:18px; box-shadow:var(--shadow)}
 
-    /* ---------- Build Log ---------- */
+    /* Build Log */
     .timeline{display:grid; gap:12px}
     .entry{
       display:grid; grid-template-columns:120px 1fr; gap:16px; padding:16px;
@@ -155,13 +151,13 @@
     .entry .t{color:var(--muted); font-weight:800}
     .entry .b{line-height:1.6}
 
-    /* ---------- Parts Table ---------- */
+    /* Parts */
     .table-shell{overflow:auto}
     table{width:100%; border-collapse:collapse}
     th,td{padding:12px 10px; border-bottom:1px solid var(--border); text-align:left}
     thead th{font-size:12px; color:var(--muted); font-weight:800; letter-spacing:.3px}
 
-    /* ---------- Gallery ---------- */
+    /* Gallery */
     .gallery{display:grid; grid-template-columns:repeat(12,1fr); gap:12px}
     .g{position:relative; border-radius:16px; overflow:hidden; border:1px solid var(--border);
        background:#0f1433; box-shadow:var(--shadow); transform: translateZ(0); transition: transform .18s ease}
@@ -170,7 +166,7 @@
     .g--w3{grid-column:span 3; aspect-ratio:4/3}
     .g--w4{grid-column:span 4; aspect-ratio:4/3}
 
-    /* ---------- Download Cards ---------- */
+    /* Downloads */
     .cards{display:grid; grid-template-columns:repeat(3,1fr); gap:12px}
     .card{
       padding:18px; border-radius:16px; border:1px solid var(--border);
@@ -180,26 +176,18 @@
     }
     .card:hover{ transform: translateY(-2px); border-color: rgba(255,255,255,.16) }
     .card h4{margin:0}
-    .btn{
-      display:inline-flex; align-items:center; gap:10px; padding:12px 16px; border-radius:12px;
-      border:1px solid var(--border); font-weight:900; letter-spacing:.2px;
-      transition: transform .16s ease, box-shadow .16s ease, background .16s ease;
-    }
-    .btn--primary{
-      color:#041221; border:none;
-      background:linear-gradient(135deg, var(--accent), #4be3d1);
-      box-shadow:0 10px 30px rgba(0,198,255,.28);
-    }
-    .btn--primary:hover{ transform: translateY(-1px); box-shadow:0 14px 40px rgba(0,198,255,.35); }
+    .btn{display:inline-flex; align-items:center; gap:10px; padding:12px 16px; border-radius:12px; border:1px solid var(--border); font-weight:900; letter-spacing:.2px; transition: transform .16s, box-shadow .16s, background .16s}
+    .btn--primary{color:#041221; border:none; background:linear-gradient(135deg, var(--accent), #4be3d1); box-shadow:0 10px 30px rgba(0,198,255,.28)}
+    .btn--primary:hover{ transform: translateY(-1px); box-shadow:0 14px 40px rgba(0,198,255,.35) }
 
-    /* ---------- Footer ---------- */
+    /* Footer */
     footer{padding:44px 0 64px; color:var(--muted); border-top:1px solid var(--border); background:rgba(6,10,24,.55); margin-top:44px}
 
-    /* ---------- Reveal on scroll ---------- */
+    /* Reveal on scroll */
     .reveal{opacity:0; transform: translateY(16px); transition: opacity .5s ease, transform .5s ease}
     .reveal.on{opacity:1; transform: translateY(0)}
 
-    /* ---------- Mobile ---------- */
+    /* Responsive */
     @media (max-width:1024px){ .hero__grid{grid-template-columns:1fr} }
     @media (max-width:980px){
       .statbar{grid-template-columns:repeat(2,1fr)}
@@ -252,7 +240,20 @@
           <div class="stat soft-border"><div class="v">2h</div><div class="k">avg. assembly</div></div>
         </div>
       </div>
-      <div class="mock reveal" aria-label="Simpit hero image"></div>
+
+      <!-- Carousel -->
+      <div class="mock reveal" aria-label="Simpit hero image">
+        <div class="mock__carousel">
+          <img src="assets/images/frame-left.png"  alt="CoreFlux Simpit — left view" class="mock__img active">
+          <img src="assets/images/frame-right.png" alt="CoreFlux Simpit — right view" class="mock__img">
+          <img src="assets/images/top-view.png"   alt="CoreFlux Simpit — top view" class="mock__img">
+        </div>
+        <div class="mock__nav" aria-label="carousel navigation">
+          <span class="dot active" aria-label="slide 1"></span>
+          <span class="dot" aria-label="slide 2"></span>
+          <span class="dot" aria-label="slide 3"></span>
+        </div>
+      </div>
     </div>
   </header>
 
@@ -387,16 +388,22 @@
     };
     if('IntersectionObserver' in window) reveal(); else document.querySelectorAll('.reveal').forEach(e=>e.classList.add('on'));
 
-    // Smooth hash scrolling (no libs)
+    // Smooth hash scroll
     document.addEventListener('click', (e)=>{
-      const a = e.target.closest('a[href^="#"]');
-      if(!a) return;
-      const id = a.getAttribute('href').slice(1);
-      const el = document.getElementById(id);
-      if(!el) return;
-      e.preventDefault();
+      const a = e.target.closest('a[href^="#"]'); if(!a) return;
+      const id = a.getAttribute('href').slice(1); const el = document.getElementById(id);
+      if(!el) return; e.preventDefault();
       window.scrollTo({ top: el.getBoundingClientRect().top + window.scrollY - 70, behavior: 'smooth' });
     });
+
+    // Hero auto carousel
+    const imgs = document.querySelectorAll('.mock__img');
+    const dots = document.querySelectorAll('.mock__nav .dot');
+    let idx = 0;
+    function show(i){ imgs.forEach((im,k)=>im.classList.toggle('active',k===i));
+                      dots.forEach((d,k)=>d.classList.toggle('active',k===i)); }
+    dots.forEach((dot,i)=>dot.addEventListener('click',()=>{ idx=i; show(idx); }));
+    setInterval(()=>{ idx = (idx + 1) % imgs.length; show(idx); }, 5000);
   </script>
 </body>
 </html>
