--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Simpit — CoreFlux</title>
   <meta name="theme-color" content="#070b1a" />
-  <meta name="description" content="Punchy, modern simpit page — neon glass, motion, and a slick carousel." />
+  <meta name="description" content="Punchy, modern simpit page — neon glass, motion, and a slick carousel with Fit/Fill." />
   <link rel="icon" type="image/png" href="assets/images/coreflux-logo.png" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;900&display=swap" rel="stylesheet">
@@ -35,9 +35,6 @@
     img{max-width:100%;display:block}
     .wrap{width:min(1240px,92vw);margin:0 auto}
 
-    /* Floating particles */
-    canvas#fx{position:fixed; inset:0; z-index:-1; pointer-events:none; mix-blend-mode:screen; opacity:.45}
-
     /* NAV */
     .nav{position:sticky; top:0; z-index:50}
     .nav__inner{display:flex;align-items:center;justify-content:space-between;padding:20px 0}
@@ -55,11 +52,7 @@
     header.hero{padding:96px 0 48px}
     .hero__grid{display:grid;grid-template-columns:1.05fr .95fr;gap:32px;align-items:center}
     .h1{font-size:clamp(38px,4vw,68px);line-height:1.02;margin:0 0 8px;letter-spacing:-.6px}
-    .h1 .fx{
-      background:linear-gradient(90deg,#fff, #9ad6ff 55%, #ffe189 85%);
-      -webkit-background-clip:text; background-clip:text; color:transparent;
-      filter:drop-shadow(0 6px 22px rgba(0,198,255,.18));
-    }
+    .h1 .fx{background:linear-gradient(90deg,#fff,#9ad6ff 55%,#ffe189 85%);-webkit-background-clip:text;background-clip:text;color:transparent;filter:drop-shadow(0 6px 22px rgba(0,198,255,.18))}
     .lede{color:var(--muted);font-size:clamp(15px,1.18vw,18px)}
     .actions{display:flex;gap:12px;margin-top:16px}
     .btn{display:inline-flex;align-items:center;gap:10px;padding:13px 18px;border-radius:14px;border:1px solid var(--border);font-weight:900;letter-spacing:.2px;transition:transform .16s ease,box-shadow .16s ease,background .16s ease}
@@ -72,12 +65,17 @@
     .stat .v{font-weight:900;font-size:18px}
     .stat .k{color:var(--muted);font-size:12px}
 
-    /* HERO CAROUSEL with neon border + 3D tilt */
+    /* HERO CAROUSEL — bigger viewport + Fit/Fill toggle */
     .mock{
-      position:relative; aspect-ratio:16/9; border-radius:24px; overflow:hidden;
-      border:1px solid var(--border); box-shadow:var(--shadow), 0 0 80px rgba(0,198,255,.18);
-      transform-style:preserve-3d; perspective:1000px; background:linear-gradient(#0f1433,#0a0f22);
+      position:relative;
+      border-radius:24px; overflow:hidden;
+      border:1px solid var(--border);
+      box-shadow:var(--shadow), 0 0 80px rgba(0,198,255,.18);
+      background:linear-gradient(#0f1433,#0a0f22);
       isolation:isolate; will-change:transform;
+      /* Bigger viewing window */
+      min-height:clamp(420px, 68vh, 820px);
+      aspect-ratio:auto;
     }
     .mock::before{
       content:""; position:absolute; inset:-2px; border-radius:26px;
@@ -85,9 +83,31 @@
       filter:blur(22px); opacity:.65; z-index:-1; animation:spin 10s linear infinite;
     }
     @keyframes spin{to{transform:rotate(1turn)}}
+
     .mock__carousel{position:relative; inset:0; width:100%; height:100%}
-    .mock__img{position:absolute; inset:0; width:100%; height:100%; object-fit:cover; opacity:0; transform:scale(1.06); transition:opacity 1.2s ease, transform 7s ease}
-    .mock__img.active{opacity:1; transform:scale(1)}
+    .mock__img{
+      position:absolute; inset:0; width:100%; height:100%;
+      object-fit:cover;              /* default = Fill */
+      opacity:0; transform:scale(1); /* we’ll scale only when desired */
+      transition:opacity 1.2s ease, transform 0.6s ease;
+      background:#0b1020;            /* bars for Fit mode */
+    }
+    .mock__img.active{opacity:1}
+
+    /* Fit mode: show full image (letterboxed) and reduce perceived crop */
+    .mock.mock--fit .mock__img{
+      object-fit:contain;
+      transform:scale(0.96);   /* small downscale to reveal a touch more even in fit */
+    }
+
+    /* Toggle button */
+    .mock__toggle{
+      position:absolute; top:12px; right:12px; z-index:2;
+      padding:8px 10px; border-radius:10px; border:1px solid var(--border);
+      background:rgba(14,20,42,.6); backdrop-filter:saturate(140%) blur(8px);
+      font-weight:800; font-size:12px; cursor:pointer;
+    }
+
     .mock__nav{position:absolute; bottom:18px; left:50%; transform:translateX(-50%); display:flex; gap:8px}
     .dot{width:11px;height:11px;border-radius:50%;background:rgba(255,255,255,.28);cursor:pointer;transition:background .3s,transform .3s}
     .dot.active{background:linear-gradient(135deg,var(--accent),#4be3d1); transform:scale(1.22)}
@@ -144,12 +164,11 @@
       .gallery{grid-template-columns:repeat(6,1fr)}
       .g--w6{grid-column:span 6}.g--w4{grid-column:span 6}.g--w3{grid-column:span 3}
       .brand__logo-wrap{width:66px;height:66px}.brand__logo-img{max-height:54px}.brand__name{font-size:1.06rem}
+      .mock{min-height:52vh}
     }
   </style>
 </head>
 <body>
-  <canvas id="fx" width="1920" height="1080" aria-hidden="true"></canvas>
-
   <!-- NAV -->
   <nav class="nav">
     <div class="nav__shell">
@@ -189,7 +208,9 @@
         </div>
       </div>
 
-      <div class="mock reveal" id="tilt">
+      <!-- Carousel with Fit/Fill -->
+      <div class="mock reveal" id="mockBox">
+        <button class="mock__toggle" type="button" id="fitToggle">Fit</button>
         <div class="mock__carousel">
           <img src="assets/images/frame-left.png"  alt="CoreFlux Simpit — left view"  class="mock__img active">
           <img src="assets/images/frame-right.png" alt="CoreFlux Simpit — right view" class="mock__img">
@@ -314,51 +335,24 @@
       window.scrollTo({ top: el.getBoundingClientRect().top + window.scrollY - 72, behavior: 'smooth' });
     });
 
-    // Hero carousel
+    // Carousel
     const imgs = document.querySelectorAll('.mock__img');
     const dots = document.querySelectorAll('.mock__nav .dot');
     let idx = 0;
-    function show(i){ imgs.forEach((im,k)=>im.classList.toggle('active',k===i));
-                      dots.forEach((d,k)=>d.classList.toggle('active',k===i)); }
+    function show(i){
+      imgs.forEach((im,k)=>im.classList.toggle('active',k===i));
+      dots.forEach((d,k)=>d.classList.toggle('active',k===i));
+    }
     dots.forEach((dot,i)=>dot.addEventListener('click',()=>{ idx=i; show(idx); }));
     setInterval(()=>{ idx = (idx + 1) % imgs.length; show(idx); }, 5200);
 
-    // 3D tilt + parallax
-    (function(){
-      const card = document.getElementById('tilt');
-      const strength = 12; // deg
-      function setTilt(e){
-        const r = card.getBoundingClientRect();
-        const px = (e.clientX - r.left)/r.width - .5;
-        const py = (e.clientY - r.top)/r.height - .5;
-        card.style.transform = `rotateX(${(-py*strength).toFixed(2)}deg) rotateY(${(px*strength).toFixed(2)}deg)`;
-      }
-      card.addEventListener('pointermove', setTilt);
-      card.addEventListener('pointerleave', ()=> card.style.transform = 'rotateX(0deg) rotateY(0deg)');
-    })();
-
-    // Floating particle field (very light)
-    (function(){
-      const c = document.getElementById('fx'), ctx = c.getContext('2d');
-      let w = c.width = window.innerWidth, h = c.height = window.innerHeight;
-      let P = Array.from({length: 80}, () => ({
-        x: Math.random()*w, y: Math.random()*h, r: Math.random()*1.8+0.4,
-        vx: (Math.random()-.5)*.25, vy: (Math.random()-.5)*.25
-      }));
-      function step(){
-        ctx.clearRect(0,0,w,h);
-        for(const p of P){
-          p.x+=p.vx; p.y+=p.vy;
-          if(p.x<0||p.x>w) p.vx*=-1; if(p.y<0||p.y>h) p.vy*=-1;
-          const g = ctx.createRadialGradient(p.x,p.y,0,p.x,p.y,p.r*8);
-          g.addColorStop(0,'rgba(0,198,255,.35)'); g.addColorStop(1,'rgba(0,198,255,0)');
-          ctx.fillStyle = g; ctx.beginPath(); ctx.arc(p.x,p.y,p.r,0,Math.PI*2); ctx.fill();
-        }
-        requestAnimationFrame(step);
-      }
-      step();
-      window.addEventListener('resize',()=>{ w=c.width=innerWidth; h=c.height=innerHeight; });
-    })();
+    // Fit / Fill toggle
+    const mock = document.getElementById('mockBox');
+    const fitBtn = document.getElementById('fitToggle');
+    fitBtn.addEventListener('click', ()=>{
+      mock.classList.toggle('mock--fit');
+      fitBtn.textContent = mock.classList.contains('mock--fit') ? 'Fill' : 'Fit';
+    });
   </script>
 </body>
 </html>
