--- a/index.html
+++ b/index.html
@@ -25,25 +25,32 @@
     a{text-decoration:none;color:inherit}
     img{max-width:100%;display:block}
     .wrap{width:min(1200px,92vw);margin:auto}
+
+    /* NAV */
     .nav{position:sticky;top:0;z-index:10;background:rgba(10,14,28,.65);backdrop-filter:blur(12px);border-bottom:1px solid var(--border)}
     .nav__inner{display:flex;justify-content:space-between;align-items:center;padding:16px 0}
-    .brand{display:flex;align-items:center;gap:12px}
-    .brand img{height:70px}
-    .brand span{font-weight:900;font-size:1.4rem}
+    .brand{display:flex;align-items:center;gap:14px}
+    .brand img{height:120px;width:auto;object-fit:contain;filter:drop-shadow(0 0 25px rgba(0,198,255,.35))}
+    .brand span{font-weight:900;font-size:1.5rem;letter-spacing:.5px}
     .links a{margin:0 10px;font-weight:600;color:var(--muted)}
     .links a:hover{color:var(--ink)}
-    .hero{display:grid;grid-template-columns:1fr 1fr;gap:40px;align-items:center;padding:80px 0}
-    .hero h1{font-size:3rem;margin:0;background:linear-gradient(90deg,#fff,#99d6ff,#ffe189);-webkit-background-clip:text;color:transparent}
-    .hero p{color:var(--muted);margin:20px 0}
+
+    /* HERO */
+    .hero{display:grid;grid-template-columns:1fr 1fr;gap:40px;align-items:center;padding:80px 0;position:relative;z-index:1}
+    #aiCanvas{position:absolute;top:0;left:0;width:100%;height:100%;z-index:0;pointer-events:none;opacity:.5}
+    .hero h1{font-size:3.4rem;margin:0;background:linear-gradient(90deg,#fff,#99d6ff,#ffe189);-webkit-background-clip:text;color:transparent}
+    .hero p{color:var(--muted);margin:20px 0;line-height:1.6}
     .btn{padding:12px 18px;border-radius:12px;font-weight:800;border:1px solid var(--border);cursor:pointer}
     .btn.primary{background:linear-gradient(135deg,var(--accent),#4be3d1);color:#000;box-shadow:0 10px 30px rgba(0,198,255,.3)}
     .btn.ghost{background:rgba(255,255,255,.05);color:var(--ink)}
     .mock{position:relative;border:1px solid var(--border);border-radius:18px;overflow:hidden;box-shadow:0 0 40px rgba(0,198,255,.2)}
-    .mock img{width:100%;height:auto;object-fit:cover}
+    .mock img{width:100%;height:auto;object-fit:cover;border-radius:18px}
+
     /* Works With */
-    .logo-strip{display:flex;justify-content:center;flex-wrap:wrap;gap:36px;padding:40px 0}
-    .logo-strip img{height:40px;opacity:.7;transition:.3s}
+    .logo-strip{display:flex;justify-content:center;flex-wrap:wrap;gap:40px;padding:60px 0}
+    .logo-strip img{height:50px;opacity:.75;transition:.3s}
     .logo-strip img:hover{opacity:1;transform:scale(1.1)}
+
     /* Configurator */
     #configurator{padding:80px 0}
     .config-grid{display:grid;grid-template-columns:2fr 1fr;gap:24px}
@@ -56,9 +63,11 @@
     .config-summary h3{margin-top:0}
     .config-summary ul{list-style:none;padding:0;margin:0}
     .config-summary li{padding:4px 0;border-bottom:1px solid var(--border);color:var(--muted)}
+
     /* Accessories */
     #accessories{padding:80px 0}
     .cards-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:24px}
+
     footer{padding:40px 0;text-align:center;color:var(--muted);border-top:1px solid var(--border)}
     @media(max-width:900px){.hero{grid-template-columns:1fr}.config-grid{grid-template-columns:1fr}}
   </style>
@@ -66,7 +75,10 @@
 <body>
   <nav class="nav">
     <div class="wrap nav__inner">
-      <div class="brand"><img src="assets/images/coreflux-logo.png"><span>Simpit</span></div>
+      <div class="brand">
+        <img src="assets/images/coreflux-logo.png" alt="CoreFlux logo">
+        <span>Simpit</span>
+      </div>
       <div class="links">
         <a href="#workswith">Works With</a>
         <a href="#configurator">Build</a>
@@ -76,6 +88,7 @@
   </nav>
 
   <section class="hero wrap">
+    <canvas id="aiCanvas"></canvas>
     <div>
       <h1>A cockpit you’ll actually finish</h1>
       <p>From first sketch to maiden flight. Modular, affordable, and comfortable for long sessions — clean enough for the living room.</p>
@@ -140,6 +153,27 @@ function addItem(name,price){
   total+=price;
   document.getElementById('totalPrice').textContent=`$${total}`;
 }
+
+// === AI PARTICLES ===
+const canvas=document.getElementById('aiCanvas');
+const ctx=canvas.getContext('2d');
+let w,h,particles=[];
+function resize(){w=canvas.width=window.innerWidth;h=canvas.height=window.innerHeight;}
+window.addEventListener('resize',resize);resize();
+
+class Particle{
+  constructor(){this.reset();}
+  reset(){this.x=Math.random()*w;this.y=Math.random()*h;this.vx=(Math.random()-.5)*0.6;this.vy=(Math.random()-.5)*0.6;this.size=Math.random()*2+1;}
+  update(){this.x+=this.vx;this.y+=this.vy;if(this.x<0||this.x>w||this.y<0||this.y>h)this.reset();}
+  draw(){ctx.beginPath();ctx.arc(this.x,this.y,this.size,0,2*Math.PI);ctx.fillStyle='rgba(0,198,255,.5)';ctx.fill();}
+}
+for(let i=0;i<120;i++)particles.push(new Particle());
+function animate(){
+  ctx.clearRect(0,0,w,h);
+  for(let p of particles){p.update();p.draw();}
+  requestAnimationFrame(animate);
+}
+animate();
 </script>
 </body>
 </html>
